--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">唐袋子</string>
+    <string name="click_to_skip">点击跳过</string>
     <string-array name="adBlockUrl">
         <item>http://ark.qq.com</item>
         <item>http://mf.atm.youku.com/mf</item>
